--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "name": "steadlane/silverstripe-massexport",
   "description": "A tool that allows you to export multiple Models at once and zip them into a single file for a specific date range",
-  "version": "1.0.0",
   "authors": [
     {
       "name": "Reece Alexander",
@@ -16,5 +15,10 @@
   },
   "require": {
     "silverstripe/framework": "^3.1"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
+    }
   }
 }
