Renamed 'code' directory to 'src'; restructured css and javascript directory structure to suit SilverStripe 4, under a new 'client' directory; renamed MassExportLeftAndMain class to MassExport; added ability to include extra models or exclude models with 'additional_models' and 'excluded_models' config settings; updated readme and composer.json

--- a/_config/massexport.yml
+++ b/_config/massexport.yml
@@ -2,6 +2,10 @@
 Name: steadlane-massexport
 ---
 
-SteadLane\MassExport\MassExportLeftAndMain:
+SteadLane\MassExport\MassExport:
   debug: false
   export_directory: '' # work in progress
+#  additional_models:        # Add additional models like so
+#    - "Namespace\\Class"
+#  excluded_models:          # Exclude models like so
+#    - "Namespace\\Class"
