--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,37 @@
 {
   "name": "steadlane/silverstripe-massexport",
+  "type": "silverstripe-vendormodule",
   "description": "A tool that allows you to export multiple Models at once and zip them into a single file for a specific date range",
+  "keywords": [
+      "silverstripe", "data", "export"
+  ],
   "authors": [
     {
       "name": "Reece Alexander",
-      "email": "reece@steadlane.com.au",
+      "email": "support@steadlane.com.au",
+      "role": "Maintainer / Developer"
+    },
+    {
+      "name": "Andrew Pike",
+      "email": "support@steadlane.com.au",
       "role": "Maintainer / Developer"
     }
   ],
   "homepage": "https://steadlane.com.au/",
-  "type": "silverstripe-module",
   "support": {
-    "email": "reece@steadlane.com.au"
+    "email": "support@steadlane.com.au",
+    "issues": "https://github.com/steadlane/silverstripe-massexport/issues"
   },
   "require": {
     "ext-zip": "*",
-    "silverstripe/framework": ">=4.0,<5.0"
+    "silverstripe/vendor-plugin": "^1",
+    "silverstripe/framework": "^4",
+    "silverstripe/cms": "^4"
   },
   "extra": {
-    "branch-alias": {
-      "dev-master": "2.0.x-dev"
-    }
+    "installer-name": "silverstripe-massexport",
+    "expose": [
+        "client/dist"
+    ]
   }
 }
